# WealthAudit

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
docs/domain/: schemas.md
docs/htmx/: README.md  graph.md  server.md  template.md
docs/logics/: bsplcf.md  forecast.md  input.md  markets.md  metrics.md  normalized.md
master/: accounts.csv  asset_classes.csv  payment_methods.csv
scripts/: export_normalized.py  fix_vc_names.py  forecast.py  generate_constants.py  regenerate_assets.py
src/: constants.py
src/domain/entities/: models.py
src/domain/repositories/: interfaces.py
src/infrastructure/: cli.py  web.py
src/infrastructure/di/: container.py
src/interface_adapters/repositories/: csv_repository.py
src/use_cases/: graph_service.py
src/use_cases/calculators/: balance_sheet.py  cash_flow.py  metrics.py
src/use_cases/dtos/: output.py
templates/: dashboard.html  input.html
