[project]
name = "bspl"
version = "0.1.0"
description = "Household Financial Statement Calculator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "injector",
    "pydantic",
    "flask",
    "plotly",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "ruff",
    "pandas-stubs",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]
